--- a/index.html
+++ b/index.html
@@ -156,8 +156,10 @@
                   </div>
              </div>
              <!-- area calculation container -->
-              <div id="area-cal" class="w-80 mt-10 lg:mt-0 border-2 border-gray-700 rounded-md h-[440px]">
-                <h3 class="text-xl text-center p-4">Area Calculation <hr></h3>
+              <div class="w-80 mt-10 lg:mt-0 border-2 border-gray-700 rounded-md h-[440px]">
+                <h3 class="text-2xl text-center font-bold pt-4">Area Calculation</h3>
+                <p class="border-2 border-black mx-12"></p>
+                <p id="area-cal" class="m-8"></p>
 
               </div>
          </div>
